@startuml

title __SINGLETON's Class Diagram__\n

  package chocolate {
    class ChocolateBoiler {
    }
  }
  

  package chocolate {
    class ChocolateController {
    }
  }
  

  package subclass {
    class CoolerSingleton {
    }
  }
  

  package subclass {
    class HotterSingleton {
    }
  }
  

  package threadsafe {
    class Singleton {
    }
  }
  

  package subclass {
    class Singleton {
    }
  }
  

  package stat {
    class Singleton {
    }
  }
  

  package dcl {
    class Singleton {
    }
  }
  

  package classic {
    class Singleton {
    }
  }
  

  package classic {
    class SingletonClient {
    }
  }
  

  package threadsafe {
    class SingletonClient {
    }
  }
  

  package dcl {
    class SingletonClient {
    }
  }
  

  package stat {
    class SingletonClient {
    }
  }
  

  package subclass {
    class SingletonTestDrive {
    }
  }
  

  CoolerSingleton -up-|> Singleton
  HotterSingleton -up-|> Singleton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
